--- a/Dockerfile-other
+++ b/Dockerfile-other
@@ -1,9 +1,8 @@
 FROM ddsderek/foundations:Alpine3.16.0-nginx1.22
 
 COPY ./web /app/web
-COPY ./start.sh /
+
+ADD ./shell /shell
 
 RUN mv /app/web /opt/web && \
-    chmod +x /start.sh
-
-ENTRYPOINT [ "/start.sh" ]
+    chmod -R 755 /shell
